# factlog

./: .gitignore  .milurc.json  README.md  pyproject.toml
.agents/skills/docs/: SKILL.md
.agents/skills/ops/: SKILL.md
.agents/skills/qa/: SKILL.md
.agents/skills/ship/: SKILL.md
.agents/skills/spec/: SKILL.md
.agents/skills/ui/: SKILL.md
.claude/commands/: build.md  docs.md  ops.md  qa.md  ship.md  spec.md  ui.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md  task.md
artifacts/validation/: factlog_validation_summary.md
docs/: STATUS.md  manual-uat-checklist.md  validation-strategy.md
docs/decisions/: ADR-001-nasa-cmapss-binary-baseline.md
docs/devlog/: 2026-04-03-nasa-cmapss-검증-파이프라인.md  2026-04-03-입력-업로드-api-구현.md  2026-04-04-e2e-검증-자동화와-발표용-요약-생성.md  2026-04-04-web-ui-mvp-구현과-테스트-환경-복구.md  2026-04-04-분석-api-구현과-조회-정합성-복구.md
docs/prd/: factlog-mvp.md
scripts/: export_validation_summary.py  run_validation.py
src/factlog_ml/: __init__.py  action_schemas.py  analysis.py  analysis_schemas.py  api.py  api_schemas.py  constants.py  dashboard_schemas.py  db.py  nasa_cmapss.py  pipeline.py  schemas.py  uploads.py  validate.py
tests/: test_analysis.py  test_api.py  test_db.py  test_nasa_cmapss.py  test_schemas.py  test_uploads.py  test_validate.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/e2e/: factlog-flow.spec.ts
web/src/: App.test.tsx  App.tsx  constants.ts  styles.css  types.ts
web/src/components/: ActionPanel.tsx  (+4 more)
(+2 files in other folders)
