[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factlog"
version = "0.1.0"
description = "FactLog validation pipeline for NASA C-MAPSS anomaly detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.24,<2.0",
  "scikit-learn>=1.3,<1.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
asyncio_default_fixture_loop_scope = "function"
