[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "factlog"
version = "0.1.0"
description = "FactLog validation pipeline for NASA C-MAPSS anomaly detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.110,<0.111",
  "numpy>=1.24,<2.0",
  "openai>=1.30,<2.0",
  "pydantic>=2.6,<3.0",
  "python-multipart>=0.0.9,<0.0.10",
  "scikit-learn>=1.3,<1.4",
  "uvicorn>=0.29,<0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<0.28",
  "pytest>=8.0,<9.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src",
]
testpaths = [
  "tests",
]
asyncio_default_fixture_loop_scope = "function"
